src/test/resources/parser/valid/listTuple.sbsc
// a list of tuples

a = (1, "Sheldon");
b = (2, "Leonard");
c = (3, "Penny");

d = [a, b, c];