src/test/resources/parser/invalid/genericListTupleMismatch.sbsc
// list element tuples should have same signature

a = ("bazinga", 1);
b = ("bazinga", 1, 2);

c = [a, b];